<resources>
    <string name="app_name">BEF</string>
    <string name="action_settings">Settings</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="file_path">파일 경로 :</string>
    <string name="operate_time">동작 시간</string>
    <string name="guide_voice">안내 음성</string>
    <string name="run_voice">실행 음성</string>
    <string name="test">테스트</string>
    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="login_ko">로그인</string>
    <string name="login">LOGIN</string>
    <string name="membership">회원가입</string>
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    <string name="city">도시</string>
    <string name="job">직업</string>
    <string name="save">SAVE</string>
    <string name="play">PLAY</string>
    <string name="recording">RECORDING</string>
    <string name="option">OPTION</string>
    <string name="start_time">00:00</string>
    <string name="end_time">01:00</string>
    <string name="rec">REC</string>
    <string name="google">GOOGLE</string>
    <string name="delete">DELETE</string>
    <string name="not_support_lang">Not supported language.</string>
    <string name="fail_init">Failed init.</string>
    <string name="not_select_lang">Not selected language.</string>
    <string name="success_init">Successed init.</string>
</resources>

