<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            style="@style/LoginEtProperty"
            android:ellipsize="end"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/et_pw"
            style="@style/LoginEtProperty"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:maxLength="8"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/LoginBtnProperty"
        android:text="@string/login_ko"/>

    <Button
        android:id="@+id/btn_membership"
        style="@style/LoginBtnProperty"
        android:text="@string/membership"/>
</LinearLayout>
